--- a/README
+++ b/README
@@ -27,9 +27,14 @@ do.modules=1 will push the contents of the module directory to /system/lib/modul
 
 do.cleanup=0 will keep the zip from removing it's working directory in /tmp/anykernel - this can be useful if trying to debug in adb shell whether the patches worked correctly. 
 
+If you are using a Sony 2012 device with a custom boot image. (like CM or PA) uncomment this line:
+#ramdisksony=/tmp/anykernel/ramdisksony;
+
 // Command Methods
 
 dump_boot
+extract_ramdisksony
+copy_ramdisksony
 backup_file <file>
 replace_string <file> <if search string> <original string> <replacement string>
 insert_line <file> <if search string> <before/after> <line match string> <inserted line>
